--- a/book/qxsjjg/index.html
+++ b/book/qxsjjg/index.html
@@ -25,5 +25,6 @@
 数据结构与算法演示<br/>
 <a href="src/main/java/chapter10/aVLTree/AVLTree.html" target="_blank">AVL树</a>
 <a href="src/main/java/chapter10/bTree/BTree.html" target="_blank">B树</a>
+<a href="src/main/java/chapter10/bpTree/BPTree.html" target="_blank">B+树</a>
 </body>
 </html>
