--- a/book/qxsjjg/index.html
+++ b/book/qxsjjg/index.html
@@ -26,5 +26,6 @@
 <a href="src/main/java/chapter10/aVLTree/AVLTree.html" target="_blank">AVL树</a>
 <a href="src/main/java/chapter10/bTree/BTree.html" target="_blank">B树</a>
 <a href="src/main/java/chapter10/bpTree/BPTree.html" target="_blank">B+树</a>
+<a href="src/main/java/chapter10/rbTree/rbTree.html" target="_blank">红黑树</a>
 </body>
 </html>
