--- a/book/qxsjjg/index.html
+++ b/book/qxsjjg/index.html
@@ -15,14 +15,15 @@
             line-height: 30px;
             text-align: center;
             text-decoration: none;
-            margin: 10px 10px 0 0;
+            margin: 10px 0 0 10px;
             background-color: #00a9ff;
             color: #fff;
         }
     </style>
 </head>
 <body>
-数据结构与算法演示<br/>
+&nbsp;&nbsp;数据结构与算法演示<br/>
+<a href="src/main/java/chapter10/heap/heap.html" target="_blank">堆</a>
 <a href="src/main/java/chapter10/aVLTree/AVLTree.html" target="_blank">AVL树</a>
 <a href="src/main/java/chapter10/bTree/BTree.html" target="_blank">B树</a>
 <a href="src/main/java/chapter10/bpTree/BPTree.html" target="_blank">B+树</a>
