--- a/book/dataStructureAlgorithmVisualization/src/main/resources/static/dataStructure/bpTree/BPTree.html
+++ b/book/dataStructureAlgorithmVisualization/src/main/resources/static/dataStructure/bpTree/BPTree.html
@@ -2,27 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=0,maximum-scale=1"/>
     <title>B+树</title>
-    <style type="text/css">
-        html, body {
-            height: 100%;
-        }
-        input{
-            border: 1px solid;
-        }
-    </style>
+    <link rel="stylesheet" href="../common/css/header.css"/>
 </head>
 <body>
+<div style="text-align: center">
+    <span style="margin-bottom: 15px;display: block;font-size: 20px">B+树</span>
+    <input type="text" id="orderValue" value="4"/>
+    <button onclick="changeOrder()" style="width: 120px">确定修改阶数</button>
+
+    <input type="text" id="addValue"/>
+    <button onclick="addV()">添&nbsp;加</button>
+
+    <input type="text" id="deleteValue"/>
+    <button onclick="deleteV()" id="delBtn">删&nbsp;除</button>
+</div>
 <canvas id="canvas" width="100%" height="100%"></canvas>
-
-<input type="text" id="orderValue" style="position: fixed; top: 10px; right: 120px;" value="4"/>
-<button onclick="changeOrder()" style="position: fixed;right: 10px;top: 10px;">确定修改阶数</button>
-
-<input type="text" id="addValue" style="position: fixed; top: 40px; right: 60px;"/>
-<button onclick="addV()" style="position: fixed;right: 10px;top: 40px;">添加</button>
-
-<input type="text" id="deleteValue" style="position: fixed; top: 70px; right: 60px;"/>
-<button onclick="deleteV()" style="position: fixed;right: 10px;top: 70px;">删除</button>
 <script type="text/javascript" src="Node.js"></script>
 <script type="text/javascript" src="BPTree.js"></script>
 <script type="text/javascript">
