--- a/book/dataStructureAlgorithmVisualization/src/main/resources/static/dataStructure/rbTree/rbTree.html
+++ b/book/dataStructureAlgorithmVisualization/src/main/resources/static/dataStructure/rbTree/rbTree.html
@@ -2,23 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=0,maximum-scale=1"/>
     <title>红黑树</title>
-    <style type="text/css">
-        html, body {
-            height: 100%;
-        }
-        input{
-            border: 1px solid;
-        }
-    </style>
+    <link rel="stylesheet" href="../common/css/header.css"/>
 </head>
 <body>
-<canvas id="canvas" width="100%" height="100%"></canvas>
-<input type="text" id="addValue" style="position: fixed; top: 10px; right: 60px;"/>
-<button onclick="addV()" style="position: fixed;right: 10px;top: 10px;">添加</button>
+<div style="text-align: center">
+    <span style="margin-bottom: 15px;display: block;font-size: 20px">红黑树</span>
+    <input type="text" id="addValue"/>
+    <button onclick="addV()">添&nbsp;加</button>
 
-<input type="text" id="deleteValue" style="position: fixed; top: 40px; right: 60px;"/>
-<button onclick="deleteV()" style="position: fixed;right: 10px;top: 40px;">删除</button>
+    <input type="text" id="deleteValue"/>
+    <button onclick="deleteV()" id="delBtn">删&nbsp;除</button>
+</div>
+<canvas id="canvas" width="100%" height="100%"></canvas>
 <script type="text/javascript" src="Comparable.js"></script>
 <script type="text/javascript" src="Node.js"></script>
 <script type="text/javascript" src="rbTree.js"></script>
