按钮宽度自动适应

--- a/book/dataStructureAlgorithmVisualization/src/main/resources/static/dataStructure/bpTree/BPTree.html
+++ b/book/dataStructureAlgorithmVisualization/src/main/resources/static/dataStructure/bpTree/BPTree.html
@@ -10,7 +10,7 @@
 <div style="text-align: center">
     <span style="margin-bottom: 15px;display: block;font-size: 20px">B+树</span>
     <input type="text" id="orderValue" value="4"/>
-    <button onclick="changeOrder()" style="width: 120px">确定修改阶数</button>
+    <button onclick="changeOrder()">确定修改阶数</button>
 
     <input type="text" id="addValue"/>
     <button onclick="addV()">添&nbsp;加</button>
