--- a/book/dataStructureAlgorithmVisualization/index.html
+++ b/book/dataStructureAlgorithmVisualization/index.html
@@ -24,11 +24,11 @@
     </style>
 </head>
 <body>
-&nbsp;&nbsp;数据结构与算法演示<br/>
-<a href="src/main/resources/static/dataStructure/heap/heap.html" target="_blank">堆</a>
-<a href="src/main/resources/static/dataStructure/aVLTree/AVLTree.html" target="_blank">AVL树</a>
-<a href="src/main/resources/static/dataStructure/bTree/BTree.html" target="_blank">B树</a>
-<a href="src/main/resources/static/dataStructure/bpTree/BPTree.html" target="_blank">B+树</a>
-<a href="src/main/resources/static/dataStructure/rbTree/rbTree.html" target="_blank">红黑树</a>
+&nbsp;&nbsp;<h2 style="margin-left: 10px;">数据结构与算法演示</h2>
+<a href="../page/heap/index.html" target="_blank">堆</a>
+<a href="../page/aVLTree/index.html" target="_blank">AVL树</a>
+<a href="../page/bTree/index.html" target="_blank">B树</a>
+<a href="../page/bpTree/index.html" target="_blank">B+树</a>
+<a href="../page/rbTree/index.html" target="_blank">红黑树</a>
 </body>
 </html>
