--- a/book/dataStructureAlgorithmVisualization/src/main/resources/static/algorithm/reg/reg.html
+++ b/book/dataStructureAlgorithmVisualization/src/main/resources/static/algorithm/reg/reg.html
@@ -37,12 +37,20 @@
 <body>
 <div style="text-align: center">
     <span style="margin-bottom: 15px;display: block;font-size: 20px">正则表达式(有限状态机)</span>
-    <span style="margin-bottom: 15px;display: block;font-size: 20px">
-        目前实现：*匹配0次或多次，$匹配数字0-9，.匹配任意一个字符
+    <span style="margin-bottom: 15px;display: block;font-size: 14px">
+        目前实现：<br/>
+        .匹配任意一个字符<br/>
+        \w 查找数字、字母及下划线。<br/>
+        \d 查找数字<br/>
+        \D 查找非数字<br/>
+        \s 查找空白字符<br/>
+        \S 查找非空白字符<br/>
+        <br/><br/>
+        *匹配0次或多次
     </span>
     文本内容：<textarea id="textInput" style="width: 400px;height: 100px">aab98k39i9</textarea>&nbsp;&nbsp;&nbsp;
     <br/><br/>
-    正则表达式：<input id="pattern" type="text" value="a*b$*k$*i$">&nbsp;&nbsp;&nbsp;<button onclick="search()">匹配</button>
+    正则表达式：<input id="pattern" type="text" value="a*b\d*k\d*i\d">&nbsp;&nbsp;&nbsp;<button onclick="search()">匹配</button>
 </div>
 </body>
 </html>
