正则表达式，实现更多规则的匹配

--- a/book/dataStructureAlgorithmVisualization/src/main/resources/static/algorithm/reg/reg.html
+++ b/book/dataStructureAlgorithmVisualization/src/main/resources/static/algorithm/reg/reg.html
@@ -44,9 +44,9 @@
         \d 查找数字,
         \D 查找非数字,
         \s 查找空白字符,
-        \S 查找非空白字符,
+        \S 查找非空白字符
         <br/>
-        *匹配0次或多次
+         * 匹配0次或多次, + 匹配1次或多次, ? 匹配0次或1次
         <br/>
         匹配 \*+?[]{}$ 字符需要使用 \ 转义，如匹配 * 字符使用 \*
     </span>
