--- a/book/dataStructureAlgorithmVisualization/src/main/resources/static/algorithm/bigFloat/bigFloat.html
+++ b/book/dataStructureAlgorithmVisualization/src/main/resources/static/algorithm/bigFloat/bigFloat.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=0,maximum-scale=1"/>
-    <title>大数精确运算</title>
+    <title>计算器</title>
     <style>
 
     </style>
 </head>
 <body>
 <div style="text-align: center">
-    <span style="margin-bottom: 15px;display: block;font-size: 20px">大数精确运算</span>
+    <span style="margin-bottom: 15px;display: block;font-size: 20px">计算器</span>
     <span style="color:red;font-weight: bold">可以计算基本数字类型无法表示的，任意长度的数</span>
     <br />
 
